# Histogram_Equalization

./: .gitignore  CMakeLists.txt  run.sh
CUDA docker/: Dockerfile  docker-compose.yml
dataset/: Untitled.ppm  Untitled1.ppm
include/: histogram_eq.h
libwb/: CMakeLists.txt
python_plots/: borabora_1.txt  execution_times.txt  input01.txt  plots.py  sample_5184×3456.txt
report/: my_bib.bib  template.aux  template.bbl  template.blg  template.tex
scripts/: run.sh
src/: histogram_eq.cpp  histogram_eq_par.cpp  histogram_eq_par.cu  histogram_eq_par_cuda.cu  main.cpp
test/: CMakeLists.txt  histogram_eq_test.cpp
